--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ html,body {
 }
 
 header {
-    background-color: #303030;
+    background-color: rgb(0, 153, 255);
     position: absolute;
     top: 0;
     left: 0;
@@ -14,20 +14,18 @@ header {
 #button {
     position: absolute;
     left: 50%;
-    top: 60%;
+    top: 50%;
     transform: translate(-50%, -50%);
     background-color: rgb(0, 153, 255);
     border: none;
     color: white;
-    width: 250px;
-    height: 50px;
-    font-size: 14pt;
-    border-radius: 25px;
+    width: 200px;
+    height: 200px;
+    font-size: 30pt;
+    border-radius: 100%;
+    font-weight: bolder;
     z-index: 999;
-}
-
-#button:hover {
-    background-color: rgb(0, 125, 209);
+    cursor: pointer;
 }
 
 #count {
@@ -107,4 +105,20 @@ input[type=number] {
     color: white;
     font-size: 75pt;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+::-webkit-input-placeholder { /* Webkit */
+    color: rgb(0, 69, 116);
+}
+  
+ :-moz-placeholder { /* Firefox 18-4 */
+    color: rgb(0, 69, 116);  
+}
+  
+ ::-moz-placeholder {  /* Firefox 19+ */
+    color: rgb(0, 69, 116);  
+}
+  
+ :-ms-input-placeholder {  /*  IE10+  */
+    color: rgb(0, 69, 116);  
 }
