--- a/main.css
+++ b/main.css
@@ -22,8 +22,8 @@ header {
     width: 200px;
     height: 200px;
     font-size: 30pt;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 100%;
-    font-weight: bolder;
     z-index: 999;
     cursor: pointer;
 }
@@ -77,6 +77,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 input[type=number] {
     -moz-appearance:textfield;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #span {
@@ -95,16 +96,6 @@ input[type=number] {
     left: 0;
     background-color: rgb(0, 153, 255);
     bottom: 0%;
-}
-
-#percent {
-    position: absolute;
-    left: 50%;
-    top: 35%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 75pt;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 ::-webkit-input-placeholder { /* Webkit */
