--- a/main.css
+++ b/main.css
@@ -113,3 +113,18 @@ input[type=number] {
  :-ms-input-placeholder {  /*  IE10+  */
     color: rgb(0, 69, 116);  
 }
+
+a {
+    position: relative;
+    top: 35px;
+    color: white; 
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
+    font-size: 20pt;
+}
+
+a:hover {
+    cursor: pointer;
+    color: rgb(0, 153, 255);
+}
